--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,48 @@
 
     <body>
         <h1>Lasagna</h1>
+        <img src = "../img/lasagna.jpg" width = '700' height = '400' alt = "Lasagna">
+        <p>Lasagne (US: /ləˈzɑːnjə/, also UK: /ləˈzænjə/,[1] Italian: [laˈzaɲɲe]; singular lasagna, Italian: [laˈzaɲɲa]) are a type of pasta, 
+           possibly one of the oldest types,[2] made of very wide, flat sheets. Either term can also refer to an Italian dish made of stacked 
+           layers of lasagne alternating with fillings such as ragù (ground meats and tomato sauce), vegetables, cheeses (which may include ricotta, 
+           mozzarella, and parmesan), and seasonings and spices, like Italian seasoning, such as garlic, oregano and basil.[3] The dish may be topped 
+           with grated cheese, which becomes melted after baking. Typically cooked pasta is assembled with the other ingredients and then baked in an 
+           oven. The resulting casserole is cut into single-serving square portions.
+        </p>
+
+        <h2>Ingredients:</h2>
+        <ul>
+            <li>ground beef</li>
+            <li>bell peppers</li>
+            <li>tomato sauce</li>
+            <li>tomato paste</li>
+            <li>tomatoes</li>
+            <li>ricotta</li>
+            <li>shredded mozarella</li>
+            <li>parmesan</li>
+            <li>meat sauce</li>
+            <li>noodles</li>
+            <li>mint</li>
+        </ul>
+
+        <h2>Steps:</h2>
+        <ol>
+            <li>Start by making the sauce with ground beef, bell peppers, onions, and a combo of tomato sauce, tomato paste, and crushed tomatoes. 
+                The three kinds of tomatoes gives the sauce great depth of flavor.
+            </li>
+            <li>
+                Let this simmer while you boil the noodles and get the cheeses ready. We're using ricotta, shredded mozzarella, and parmesan -- like 
+                the mix of tomatoes, this 3-cheese blend gives the lasagna great flavor!
+            </li>
+            <li>
+                From there, it's just an assembly job. A cup of meat sauce, a layer of noodles, more sauce, followed by a layer of cheese. Repeat until 
+                you have three layers and have used up all the ingredients.
+            </li>
+            <li>
+                Bake until bubbly and you're ready to eat!
+            </li>
+        </ol>
+
     </body>
 
 </html>
