--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href = "./recipes/lasagna.html">Lasagna</a>
-        <a href = "./recipes/valicream.html">Vanilla Ice Cream</a>
+        <ol>
+            <li><a href = "./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href = "./recipes/valicream.html">Vanilla Ice Cream</a></li>
+        </ol>
     </body>
 
 </html>
